--- a/index.html
+++ b/index.html
@@ -1,35 +1,100 @@
----
-layout: default
-title:林乃胜的博客
----
-# {{ page.title }}
+<head>
+	<meta charset="utf-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="en" http-equiv="Content-Language">
+	<meta content="width=1020" name="viewport">
+	<title>LiinNs</title>
+	<link rel="stylesheet" media="all" href="./stylesheets/stylesheet.css">
+	<link rel="stylesheet" media="all" href="./stylesheets/markdown.css">
+	<link rel="stylesheet" media="all" href="./stylesheets/syntax.css">
+</head>
+<body>
+	<article itemprop="mainContentOfPage" class="markdown-body entry-content">
 
-### 火狐同步sync 国际版和本地版
-fedora默认的firefox是国际版的，题主我因为以前在win10 下使用的是本地版firefox，而firefox的国际版和本地版同步账号不互通，
-导致切换过来后所有的拓展和书签都无法正常使用，于是琢磨了一个下午，终于将国际版同步转换为本地版同步，
-以下是具体的配置，写下来给同样碰到问题的朋友查看，也方便自己日后修改。
+		<h1><a aria-hidden="true" href="#火狐同步sync-国际版和本地版" class="anchor" id="user-content-火狐同步sync-国际版和本地版"><span class="octicon octicon-link"></span></a>火狐同步sync 国际版和本地版</h1>
 
-地址栏进入 `about:config`
+		<p>fedora默认的firefox是国际版的，题主我因为以前在win10 下使用的是本地版firefox，而firefox的国际版和本地版同步账号不互通，
+		导致切换过来后所有的拓展和书签都无法正常使用，于是琢磨了一个下午，终于将国际版同步转换为本地版同步，
+		以下是具体的配置，写下来给同样碰到问题的朋友查看，也方便自己日后修改。</p>
 
-**注意**：
+		<p>地址栏进入 <code>about:config</code></p>
 
-1. 在修改前先将当前使用的同步账号断开，修改完后重启firefox。
-2. 本地版除了比国际版多出一个`.cn`，还有一些细小的区别，大家修改的时候要小心，不要为了省事给自己找麻烦。
-3. 如果不小心修改错了，可以地址栏进入 `about:support` 选择右上角的**Refresh Firefox**重置火狐浏览器。
-4. *斜体*字为可选项
-5. 可以右健选择**New**新建新的配置项。
-6. 可以右健选择**Reset**重置当前项为默认值。
+		<p><strong>注意</strong>：</p>
 
-配置项 | 国际版 | 本地版 |
--------|--------|--------
-identity.fxaccounts.auth.uri | https://api.accounts.firefox.com/v1 | https://api-accounts.firefox.com.cn/v1
-identity.fxaccounts.remote.force_auth.uri | https://accounts.firefox.com/force_auth?service=sync&context=fx_desktop_v1 | https://accounts.firefox.com.cn/force_auth?service=sync&context=fx_desktop_v1
-identity.fxaccounts.remote.oauth.uri | https://oauth.accounts.firefox.com/v1 | https://oauth.firefox.com.cn/v1
-identity.fxaccounts.remote.profile.uri | https://profile.accounts.firefox.com/v1 | https://profile.firefox.com.cn/v1
-identity.fxaccounts.remote.signin.uri | https://accounts.firefox.com/signin?service=sync&context=fx_desktop_v1 | https://accounts.firefox.com.cn/signin?service=sync&context=fx_desktop_v1
-identity.fxaccounts.remote.signup.uri | https://accounts.firefox.com/signup?service=sync&context=fx_desktop_v1 | https://accounts.firefox.com.cn/signup?service=sync&context=fx_desktop_v1
-identity.fxaccounts.remote.uri |   | https://accounts.firefox.com.cn/?service=sync&context=fx_desktop_v1
-identity.fxaccounts.remote.webchannel.uri | https://accounts.firefox.com/ | https://accounts.firefox.com.cn/
-identity.fxaccounts.settings.uri | https://accounts.firefox.com/settings | https://accounts.firefox.com.cn/settings
-*services.sync.fxa.privacyURL* | https://accounts.firefox.com/legal/privacy | https://accounts.firefox.com.cn/legal/privacy
-*services.sync.fxa.termsURL* | https://accounts.firefox.com/legal/terms | https://accounts.firefox.com.cn/legal/terms
+		<ol>
+			<li>在修改前先将当前使用的同步账号断开，修改完后重启firefox。</li>
+			<li>本地版除了比国际版多出一个<code>.cn</code>，还有一些细小的区别，大家修改的时候要小心，不要为了省事给自己找麻烦。</li>
+			<li>如果不小心修改错了，可以地址栏进入 <code>about:support</code> 选择右上角的<strong>Refresh Firefox</strong>重置火狐浏览器。</li>
+			<li><em>斜体</em>字为可选项</li>
+			<li>可以右健选择<strong>New</strong>新建新的配置项。</li>
+			<li>可以右健选择<strong>Reset</strong>重置当前项为默认值。</li>
+		</ol>
+
+		<table>
+			<thead>
+				<tr>
+					<th>配置项</th>
+					<th>国际版</th>
+					<th>本地版</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>identity.fxaccounts.auth.uri</td>
+					<td><a href="https://api.accounts.firefox.com/v1">https://api.accounts.firefox.com/v1</a></td>
+					<td><a href="https://api-accounts.firefox.com.cn/v1">https://api-accounts.firefox.com.cn/v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.force_auth.uri</td>
+					<td><a href="https://accounts.firefox.com/force_auth?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/force_auth?service=sync&amp;context=fx_desktop_v1</a></td>
+					<td><a href="https://accounts.firefox.com.cn/force_auth?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/force_auth?service=sync&amp;context=fx_desktop_v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.oauth.uri</td>
+					<td><a href="https://oauth.accounts.firefox.com/v1">https://oauth.accounts.firefox.com/v1</a></td>
+					<td><a href="https://oauth.firefox.com.cn/v1">https://oauth.firefox.com.cn/v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.profile.uri</td>
+					<td><a href="https://profile.accounts.firefox.com/v1">https://profile.accounts.firefox.com/v1</a></td>
+					<td><a href="https://profile.firefox.com.cn/v1">https://profile.firefox.com.cn/v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.signin.uri</td>
+					<td><a href="https://accounts.firefox.com/signin?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/signin?service=sync&amp;context=fx_desktop_v1</a></td>
+					<td><a href="https://accounts.firefox.com.cn/signin?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/signin?service=sync&amp;context=fx_desktop_v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.signup.uri</td>
+					<td><a href="https://accounts.firefox.com/signup?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/signup?service=sync&amp;context=fx_desktop_v1</a></td>
+					<td><a href="https://accounts.firefox.com.cn/signup?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/signup?service=sync&amp;context=fx_desktop_v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.uri</td>
+					<td></td>
+					<td><a href="https://accounts.firefox.com.cn/?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/?service=sync&amp;context=fx_desktop_v1</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.remote.webchannel.uri</td>
+					<td><a href="https://accounts.firefox.com/">https://accounts.firefox.com/</a></td>
+					<td><a href="https://accounts.firefox.com.cn/">https://accounts.firefox.com.cn/</a></td>
+				</tr>
+				<tr>
+					<td>identity.fxaccounts.settings.uri</td>
+					<td><a href="https://accounts.firefox.com/settings">https://accounts.firefox.com/settings</a></td>
+					<td><a href="https://accounts.firefox.com.cn/settings">https://accounts.firefox.com.cn/settings</a></td>
+				</tr>
+				<tr>
+					<td><em>services.sync.fxa.privacyURL</em></td>
+					<td><a href="https://accounts.firefox.com/legal/privacy">https://accounts.firefox.com/legal/privacy</a></td>
+					<td><a href="https://accounts.firefox.com.cn/legal/privacy">https://accounts.firefox.com.cn/legal/privacy</a></td>
+				</tr>
+				<tr>
+					<td><em>services.sync.fxa.termsURL</em></td>
+					<td><a href="https://accounts.firefox.com/legal/terms">https://accounts.firefox.com/legal/terms</a></td>
+					<td><a href="https://accounts.firefox.com.cn/legal/terms">https://accounts.firefox.com.cn/legal/terms</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</article>
+</body>
