update index file

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		导致切换过来后所有的拓展和书签都无法正常使用，于是琢磨了一个下午，终于将国际版同步转换为本地版同步，
 		以下是具体的配置，写下来给同样碰到问题的朋友查看，也方便自己日后修改。</p>
 
-		<p>地址栏进入 <code>about:config</code></p>
+		<p>地址栏进入 <code><a href="about:config">about:config</a></code></p>
 
 		<p><strong>注意</strong>：</p>
 
 		<ol>
 			<li>在修改前先将当前使用的同步账号断开，修改完后重启firefox。</li>
 			<li>本地版除了比国际版多出一个<code>.cn</code>，还有一些细小的区别，大家修改的时候要小心，不要为了省事给自己找麻烦。</li>
-			<li>如果不小心修改错了，可以地址栏进入 <code>about:support</code> 选择右上角的<strong>Refresh Firefox</strong>重置火狐浏览器。</li>
+			<li>如果不小心修改错了，可以地址栏进入 <code><a href="about:support">about:support</a></code> 选择右上角的<strong>Refresh Firefox</strong>重置火狐浏览器。</li>
 			<li><em>斜体</em>字为可选项</li>
 			<li>可以右健选择<strong>New</strong>新建新的配置项。</li>
 			<li>可以右健选择<strong>Reset</strong>重置当前项为默认值。</li>
