--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: LiinNs's Blog
 		<li>本地版除了比国际版多出一个<code>.cn</code>，还有一些细小的区别，大家修改的时候要小心，不要为了省事给自己找麻烦。</li>
 		<li>如果不小心修改错了，可以地址栏进入 <code><a href="about:support">about:support</a></code> 选择右上角的<strong>Refresh Firefox</strong>重置火狐浏览器。</li>
 		<li><em>斜体</em>字为可选项</li>
-		<li>可以右健选择<strong>New</strong>新建新的配置项。</li>
+		<li>可以右健选择<strong>New</strong>新建新的配置项。可以选择String、Boolean、Integer</li>
 		<li>可以右健选择<strong>Reset</strong>重置当前项为默认值。</li>
 	</ol>
 
@@ -34,58 +34,79 @@ title: LiinNs's Blog
 		<tbody>
 			<tr>
 				<td>identity.fxaccounts.auth.uri</td>
-				<td><a href="https://api.accounts.firefox.com/v1">https://api.accounts.firefox.com/v1</a></td>
-				<td><a href="https://api-accounts.firefox.com.cn/v1">https://api-accounts.firefox.com.cn/v1</a></td>
+				<td>https://api.accounts.firefox.com/v1</td>
+				<td>https://api-accounts.firefox.com.cn/v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.force_auth.uri</td>
-				<td><a href="https://accounts.firefox.com/force_auth?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/force_auth?service=sync&amp;context=fx_desktop_v1</a></td>
-				<td><a href="https://accounts.firefox.com.cn/force_auth?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/force_auth?service=sync&amp;context=fx_desktop_v1</a></td>
+				<td>https://accounts.firefox.com/force_auth?service=sync&amp;context=fx_desktop_v1</td>
+				<td>https://accounts.firefox.com.cn/force_auth?service=sync&amp;context=fx_desktop_v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.oauth.uri</td>
-				<td><a href="https://oauth.accounts.firefox.com/v1">https://oauth.accounts.firefox.com/v1</a></td>
-				<td><a href="https://oauth.firefox.com.cn/v1">https://oauth.firefox.com.cn/v1</a></td>
+				<td>https://oauth.accounts.firefox.com/v1</td>
+				<td>https://oauth.firefox.com.cn/v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.profile.uri</td>
-				<td><a href="https://profile.accounts.firefox.com/v1">https://profile.accounts.firefox.com/v1</a></td>
-				<td><a href="https://profile.firefox.com.cn/v1">https://profile.firefox.com.cn/v1</a></td>
+				<td>https://profile.accounts.firefox.com/v1</td>
+				<td>https://profile.firefox.com.cn/v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.signin.uri</td>
-				<td><a href="https://accounts.firefox.com/signin?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/signin?service=sync&amp;context=fx_desktop_v1</a></td>
-				<td><a href="https://accounts.firefox.com.cn/signin?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/signin?service=sync&amp;context=fx_desktop_v1</a></td>
+				<td>https://accounts.firefox.com/signin?service=sync&amp;context=fx_desktop_v1</td>
+				<td>https://accounts.firefox.com.cn/signin?service=sync&amp;context=fx_desktop_v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.signup.uri</td>
-				<td><a href="https://accounts.firefox.com/signup?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com/signup?service=sync&amp;context=fx_desktop_v1</a></td>
-				<td><a href="https://accounts.firefox.com.cn/signup?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/signup?service=sync&amp;context=fx_desktop_v1</a></td>
+				<td>https://accounts.firefox.com/signup?service=sync&amp;context=fx_desktop_v1</td>
+				<td>https://accounts.firefox.com.cn/signup?service=sync&amp;context=fx_desktop_v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.uri</td>
 				<td></td>
-				<td><a href="https://accounts.firefox.com.cn/?service=sync&amp;context=fx_desktop_v1">https://accounts.firefox.com.cn/?service=sync&amp;context=fx_desktop_v1</a></td>
+				<td>https://accounts.firefox.com.cn/?service=sync&amp;context=fx_desktop_v1</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.remote.webchannel.uri</td>
-				<td><a href="https://accounts.firefox.com/">https://accounts.firefox.com/</a></td>
-				<td><a href="https://accounts.firefox.com.cn/">https://accounts.firefox.com.cn/</a></td>
+				<td>https://accounts.firefox.com/</td>
+				<td>https://accounts.firefox.com.cn/</td>
 			</tr>
 			<tr>
 				<td>identity.fxaccounts.settings.uri</td>
-				<td><a href="https://accounts.firefox.com/settings">https://accounts.firefox.com/settings</a></td>
-				<td><a href="https://accounts.firefox.com.cn/settings">https://accounts.firefox.com.cn/settings</a></td>
+				<td>https://accounts.firefox.com/settings</td>
+				<td>https://accounts.firefox.com.cn/settings</td>
 			</tr>
 			<tr>
+				<td>loop.fxa.enabled</td>
+				<td></td>
+				<td>false</td>
+			</tr>
+			<tr>
+				<td>services.sync.fxaccounts.enabled</td>
+				<td></td>
+				<td>true</td>
+			</tr>
+			<tr>
+				<td>services.sync.statusURL</td>
+				<td>https://services.mozilla.com/status/</td>
+				<td>https://accounts.firefox.com.cn/status/</td>
+			</tr>
+			<tr>
+				<td>services.sync.tokenServerURI</td>
+				<td>https://token.services.mozilla.com/1.0/sync/1.5</td>
+				<td>https://sync.firefox.com.cn/token/1.0/sync/1.5</td>
+			</tr>
+
+			<tr>
 				<td><em>services.sync.fxa.privacyURL</em></td>
-				<td><a href="https://accounts.firefox.com/legal/privacy">https://accounts.firefox.com/legal/privacy</a></td>
-				<td><a href="https://accounts.firefox.com.cn/legal/privacy">https://accounts.firefox.com.cn/legal/privacy</a></td>
+				<td>https://accounts.firefox.com/legal/privacy</td>
+				<td>https://accounts.firefox.com.cn/legal/privacy</td>
 			</tr>
 			<tr>
 				<td><em>services.sync.fxa.termsURL</em></td>
-				<td><a href="https://accounts.firefox.com/legal/terms">https://accounts.firefox.com/legal/terms</a></td>
-				<td><a href="https://accounts.firefox.com.cn/legal/terms">https://accounts.firefox.com.cn/legal/terms</a></td>
+				<td>https://accounts.firefox.com/legal/terms</td>
+				<td>https://accounts.firefox.com.cn/legal/terms</td>
 			</tr>
 		</tbody>
 	</table>
