确定基本框架

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: LiinNs's Blog
 ---
+<article class="markdown-body">
 <h1><a aria-hidden="true" href="#火狐同步sync-国际版和本地版" class="anchor" id="user-content-火狐同步sync-国际版和本地版"><span class="octicon octicon-link"></span></a>火狐同步sync 国际版和本地版</h1>
 
 <p>fedora默认的firefox是国际版的，题主我因为以前在win10 下使用的是本地版firefox，而firefox的国际版和本地版同步账号不互通，
@@ -108,3 +109,4 @@ title: LiinNs's Blog
 		</tr>
 	</tbody>
 </table>
+</article>
