--- a/profile/index.html
+++ b/profile/index.html
@@ -1,7 +1,11 @@
+---
+title: Profile | LiinNs's Blog
+---
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Profile</title>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="en" http-equiv="Content-Language">
     <meta content="width=1020" name="viewport">
