--- a/profile/index.html
+++ b/profile/index.html
@@ -1,6 +1,3 @@
----
-title: Profile | LiinNs's Blog
----
 <!DOCTYPE html>
 <html>
 <head>
@@ -429,7 +426,7 @@ ul.subContact li:not(:last-of-type) {
       <h2 class="current-position">开发工程师</h2>
       <ul class="subContact">
           <li class="location"><span class="icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z" class="style-scope iron-icon"></path></g></svg></span> 上海市</li>
-        <li class="website"><span class="icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z" class="style-scope iron-icon"></path></g></svg></span><a href="https://liinns.github.io"> https://liinns.github.io</a></li>
+        <li class="website"><span class="icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z" class="style-scope iron-icon"></path></g></svg></span><a href="http://liinns.github.io"> liinns.github.io</a></li>
         <li class="email"><span class="icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" class="style-scope iron-icon"></path></g></svg></span><a href="mailto:ultrabooklin@163.com"> ultrabooklin@163.com</a></li>
         <li class="phone"><span class="icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M17 1.01L7 1c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z" class="style-scope iron-icon"></path></g></svg></span> 18789286079</li>
       </ul>
@@ -441,7 +438,7 @@ ul.subContact li:not(:last-of-type) {
             <h2 id="about-title" class="resumeSection">自我简介</h2>
           </section>
           <section class="sectionRight">
-            <p class="about-me">系湖南省长沙市中南大学2013本科毕业生，学士学位，从事JavaWeb软件开发已逾2年（一年制造企业信息化平台开发，一年数据挖掘开发），关注大数据挖掘和信息可视化处理以及前端开发。</p>
+            <p class="about-me">系湖南省长沙市中南大学2013本科毕业生，信息与计算科学专业本科学士学位毕业，从事JavaWeb软件开发已逾2年（一年制造企业信息化系统开发，一年数据挖掘开发），掌握常用开发框架和库使用，了解宽泛，但是并不深入，希望被招聘企业当成能独立开发的技术新人看待。关注大数据挖掘和信息可视化处理以及前端开发。特别愿意呆在电脑前面学习技术，特别高兴有人主动搭讪。</p>
           </section>
           <div class="clearfix"></div>
         </section>
@@ -456,7 +453,7 @@ ul.subContact li:not(:last-of-type) {
                   <h3 class="title">海南省科学发展研究院 – (模拟仿真中心部门)研发工程师</h3> 
                   <h3 class="time">2015-04-20 – 2016-04-22（一年）</h3> 
                   <div class="description">
-                    <p>以政治、经济、社会等理论为主要研究方向的公益性决策研究机构，是海南省重点支持的决策咨询机构。模拟经济、社会、生态等系统中相关要素进行系统计算，仿真系统的客观规律，分析系统的发展趋势支持决策咨询。</p>
+                    <p>以政治、经济、社会等理论为主要研究方向的公益性决策研究机构，是海南省重点支持的决策咨询机构。模拟经济、社会、生态等系统中相关要素进行系统计算，仿真系统的客观规律，分析系统的发展趋势支持决策咨询。在职期间担任结构化数据开发工程师，负责系统基础功能模块、非结构化数据(文档)转化为结构化数据(表单，树，矩阵等)开发维护，对于机器学习，数据统计挖掘算法有一定了解。后因个人为追求更好的成长空间决定离职。</p>
                   </div>
 <!--                    -->
                 </li>
@@ -464,7 +461,7 @@ ul.subContact li:not(:last-of-type) {
                   <h3 class="title">厦门市东软汉和信息科技有限公司 – 开发工程师</h3> 
                   <h3 class="time">2014-03-12 – 2015-03-20(一年)</h3> 
                   <div class="description">
-                    <p>面向中小企业制造业信息化的ASP应用研究，供应链ASP应用系统需求分析，主攻订单领域，负责ERP-OM、CRM、SRM等订单领域IT产品版本管理，熟悉供应链端到端业务流程及ERP实施。</p>
+                    <p>面向中小企业制造业信息化的ASP应用研究，供应链ASP应用系统需求分析，主攻订单领域，负责ERP-OM、CRM、SRM等订单领域IT产品版本管理，熟悉供应链端到端业务流程及ERP实施。这是我作为新人入职学习的第一份工作，java普通CRUD开发和JavaScript的EXTjs开发是入职后一个月学习上手的，因个人肯吃苦，爱学习有幸参与完整项目扬力MES项目和公司核心项目Core的开发工作。后因家庭原因不得不选择离职回到海南，并工作一年。</p>
                   </div>
 <!--                    -->
                 </li>
@@ -592,7 +589,7 @@ ul.subContact li:not(:last-of-type) {
             <div class="skills">
               <h3 class="title">框架类</h3>
               <ul>
-                <li>Hibernat</li>
+                <li>Hibernate</li>
                 <li>Spring</li>
                 <li>Struts</li>
                 <li>jQuery</li>
@@ -607,6 +604,7 @@ ul.subContact li:not(:last-of-type) {
                 <li>快速原型设计（Mockups）</li>
                 <li>需求分析</li>
                 <li>程序设计</li>
+                <li>正则表达式</li>
                 <li>UML</li>
               </ul>
             </div>
@@ -662,4 +660,3 @@ ul.subContact li:not(:last-of-type) {
   </footer>
 </body>
 </html>
-
