--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <!-- font-icon -->
+  <link rel="stylesheet" href="./plugin/font-awesome-4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./plugin/bootstrap4/css/bootstrap.min.css">
   <!-- Custom styles for this template -->
@@ -17,9 +18,9 @@
   <div class="site-wrapper">
 
     <div class="site-wrapper-inner">
-
+      <!-- cover-container start -->
       <div class="cover-container">
-
+        <!-- cover-header start -->
         <div class="masthead clearfix">
           <div class="inner">
             <h3 class="masthead-brand">Cover</h3>
@@ -30,7 +31,7 @@
             </nav>
           </div>
         </div>
-
+        <!-- cover-header end -->
         <div class="inner cover">
           <h1 class="cover-heading">Cover your page.</h1>
           <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your
@@ -39,15 +40,15 @@
             <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
           </p>
         </div>
-
+        <!-- cover-footer start -->
         <div class="mastfoot">
           <div class="inner">
             <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
           </div>
         </div>
-
+        <!-- cover-footer end -->
       </div>
-
+      <!-- cover-container end -->
     </div>
 
   </div>
