--- a/index.html
+++ b/index.html
@@ -23,27 +23,22 @@
         <!-- cover-header start -->
         <div class="masthead clearfix">
           <div class="inner">
-            <h3 class="masthead-brand">Cover</h3>
+            <h3 class="masthead-brand">LiinNs</h3>
             <nav class="nav nav-masthead">
               <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Fun.c</a>
+              <a class="nav-link" href="#">Post</a>
+              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Profile</a>
             </nav>
           </div>
         </div>
         <!-- cover-header end -->
-        <div class="inner cover">
-          <h1 class="cover-heading">Cover your page.</h1>
-          <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your
-            own fullscreen background photo to make it your own.</p>
-          <p class="lead">
-            <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-          </p>
-        </div>
+        <h1>Thinkin`</h1>
         <!-- cover-footer start -->
         <div class="mastfoot">
           <div class="inner">
-            <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            <p>Built with bootstrap4, benifit from vue, jquery-3, font-awesome-4, tether1, lodash-3 etc...,by <a href="https://liinns.github.io">LiinNs</a>.</p>
           </div>
         </div>
         <!-- cover-footer end -->
