--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <h3 class="masthead-brand">LiinNs</h3>
             <nav class="nav nav-masthead">
               <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Fun.c</a>
-              <a class="nav-link" href="#">Post</a>
-              <a class="nav-link" href="#">About</a>
-              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="/func">Fun.c</a>
+              <a class="nav-link" href="/post">Post</a>
+              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </nav>
           </div>
         </div>
@@ -38,7 +38,7 @@
         <!-- cover-footer start -->
         <div class="mastfoot">
           <div class="inner">
-            <p>Built with bootstrap4, benifit from vue, jquery-3, font-awesome-4, tether1, lodash-3 etc...,by <a href="https://liinns.github.io">LiinNs</a>.</p>
+            <p>Built with bootstrap4, benifit from vue, jquery-3, font-awesome-4, tether1, lodash-3 etc...,by <a href="/">LiinNs</a>.</p>
           </div>
         </div>
         <!-- cover-footer end -->
