添加帖子分类

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: application
-title: About
+title: 关于LiinNs
 ---
 <div class="tile is-ancestor">
     <div class="tile is-vertical is-8">
