--- a/404.html
+++ b/404.html
@@ -1,5 +1,34 @@
 ---
-layout: application
-title: Page gone!
+title: 失踪页面
+permalink: /404.html
 ---
-这是一个没有灵魂的 -> 404!!!
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <!-- todo keywords tags categories -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title }}</title>
+    {% feed_meta %}
+    {% seo %}
+    <link href="/assets/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  </head>
+  <body>
+    <section class="hero is-light is-fullheight">
+        <div class="hero-body">
+            <div class="container" style="text-align: center;">
+              <figure class="image" style="margin: auto; height: 320px;width: 320px;">
+                <img src="/assets/images/ball-min.png">
+              </figure>
+              <p class="title">
+                  一个没有灵魂的页面
+              </p>
+            </div>
+          </div>
+    </section>
+  </body>
+  </html>
+
