--- a/404.html
+++ b/404.html
@@ -26,6 +26,8 @@ permalink: /404.html
               <p class="title">
                   一个没有灵魂的页面
               </p>
+              </br>
+              <a href="/">返回首页</a>
             </div>
           </div>
     </section>
