--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 ---
-layout: application 
+layout: application
+title: LiinNs's Blog
+date: 2018-11-10 22:03:44 +0800
 ---
 
-{% for post in site.posts %}
-  <div class="box" data-href="{{ post.url }}">
-    <article class="media">
-      <div class="media-content">
-        <div class="content">
-          <p>
-            <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
-              <small>@</small> <small>{{ post.date }}</small>
-            <br>
-            {{post.excerpt}}
-          </p>
-        </div>
-      </div>
-    </article>
-  </div>
-{% endfor %}
-
+  <figure class="image">
+    <img style="margin:auto; width:13%;" src="/assets/images/pokemon-min.png"/>
+  </figure>
+    
