--- a/404.html
+++ b/404.html
@@ -6,16 +6,7 @@ layout: none
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <!-- todo keywords tags categories -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }}</title>
-    {% feed_meta %}
-    {% seo %}
-    <link href="/assets/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+      {% include _head.html %}
   </head>
   <body>
     <section class="hero is-light is-fullheight">
