调整界面渲染

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ date: 2018-11-10 22:03:44 +0800
 ---
 
   <figure class="image">
-    <img style="margin:auto; width:13%;" src="/assets/images/pokemon-min.png"/>
+    <img style="margin:auto;width: 400px;" src="/assets/images/voltage-min.png"/>
   </figure>
     
